实现双向同步
