# docs/swagger.json
@@ -947,6 +947,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "排序方式",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "分类ID",
                         "name": "tag_id",
                         "in": "path",
@@ -972,8 +978,8 @@
                             ]
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/model.StandJsonStruct"
                         }
@@ -1452,6 +1458,9 @@
                 },
                 "description": {
                     "type": "string"
+                },
+                "hot_num": {
+                    "type": "integer"
                 },
                 "redirect": {
                     "type": "boolean"
